--- a/landingpage/base.html
+++ b/landingpage/base.html
@@ -21,10 +21,10 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="http://127.0.0.1:8000/">My Shoppe</a>
+                <a class="navbar-brand" href="/">My Shoppe</a>
             </div>
             <ul class="nav navbar-nav">
-                <li class="active"><a href="http://127.0.0.1:8000/">Home</a></li>
+                <li class="active"><a href="/">Home</a></li>
                 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Category <span
                             class="caret"></span></a>
                     <ul class="dropdown-menu">
