--- a/landingpage/base.html
+++ b/landingpage/base.html
@@ -48,7 +48,7 @@
                     <li><a href="/login">Cart</a></li>
                 {% endif %}
             </ul>
-            <form class="navbar-form navbar-left" action="searchitem" method="post">
+            <form class="navbar-form navbar-left" action="//searchitem" method="post">
                 {% csrf_token %}
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="Search for products, brands and more..." size="40" name="keyword" id="keyword">
